# AI-Influencer

./: .env.example  .gitignore  CLAUDE.md  CUsersseba5AI-influencertest_output.json  PROMPT_LAB_SUMMARY.md  QUICKSTART.md  README.md  REFACTOR_SUMMARY.md  STARTUP.md  WARDROBE_BANK.md  check_leonardo_models.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test_leonardo_locked.py  test_leonardo_p0.py
.claude/: settings.local.json
app/data/: history.json  persona.json  prompt_config.json  recent_posted_combinations.json  variety_bank.json  video_motion_bank.json
app/data/audits/: wardrobe_audit_20251115_123108.json
app/data/backups/: variety_bank.20251115_111237.json  variety_bank_camera_angle_backup_20251116_093608.json
app/data/locations/: france.json  greece.json  iceland.json  italy.json  japan.json  maldives.json  spain.json  switzerland.json  thailand.json  uae_dubai.json
app/data/locations_us/: _index_manhattan.json  (+13 more)
backend/: diagnostic_length.py
backend/app/: main.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  ImageReview.jsx  LogsPanel.jsx  PromptDetail.jsx  PromptItem.jsx  PromptLab.jsx  QueueView.jsx  SchedulerSettings.jsx  VideoReview.jsx  api.js
scripts/: build_variety_banks.py  check_wardrobe_compliance.py  clean_wardrobe_bank.py  debug_leonardo_api.py  dev_run.bat  dev_run.sh  discover_leonardo_elements.py  fast_merge_wardrobe.py  process_wardrobe.py  start_backend.bat  start_backend.sh  start_frontend.bat  start_frontend.sh  test_bundle_generation.py
(+136 files in other folders)
